# weavgui

./: README.md  README.zh.md  pyproject.toml
skills/weavgui/: SKILL.md
weavgui/: __main__.py  cli.py  keyboard.py  mouse.py  pasteboard.py  screenshot.py  snapshot.py  utils.py
