[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weavgui"
version = "0.1.5"
description = "CLI to orchestrate and automate graphical desktop workflows."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click", "mss", "pillow", "pyautogui", "pyperclip"]

[project.optional-dependencies]
dev = ["pytest>=9.0.0,<10.0.0", "pytest-asyncio>=1.3.0,<2.0.0", "ruff>=0.1.0"]

[project.scripts]
weavgui = "weavgui.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["weavgui"]

[tool.hatch.build.targets.wheel.sources]
"weavgui" = "weavgui"

[tool.hatch.build]
include = ["weavgui/**/*.py"]

[tool.hatch.build.targets.sdist]
include = ["weavgui/", "README.md", "LICENSE"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "E741"]
