[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weavgui"
version = "0.1.6"
description = "CLI to orchestrate and automate graphical desktop workflows."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1,<9.0.0",
    "mss>=10.1.0,<11.0.0",
    "pillow>=12.1.1,<13.0.0",
    "pyautogui>=0.9.54,<1.0.0",
    "pyperclip>=1.11.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.15.6,<1.0.0",
]

[project.scripts]
weavgui = "weavgui.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["weavgui"]

[tool.hatch.build.targets.wheel.sources]
"weavgui" = "weavgui"

[tool.hatch.build]
include = ["weavgui/**/*.py"]

[tool.hatch.build.targets.sdist]
include = ["weavgui/", "README.md", "README.zh.md", "LICENSE"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "E741"]
